--- a/client/src/index.css
+++ b/client/src/index.css
@@ -42,3 +42,43 @@
   align-items: center;
   flex-direction: column;
 }
+.main {
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.category{
+align-items: start;
+}
+.img-container {
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+  height: 100%;
+}
+
+.img-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.img-container .btn {
+  position: absolute;
+  top: 80%;
+  left: 30%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: rgba(0,0,0,0.5);
+  color: white;
+  font-size: 16px;
+  padding: 12px 24px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  text-align: center;
+}
+
+.img-container .btn:hover {
+  background-color: black;
+}
